--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -41,10 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=1+1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,10 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,12 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a += 1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,12 +159,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,12 +202,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=5\n",
+    "b=2\n",
+    "print(a,b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,12 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=a\n",
+    "a=b\n",
+    "b=c\n",
+    "print(a,b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,12 +259,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a vaut 2 et b vaut 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"a vaut\", a, \"et b vaut\", b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,12 +285,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello world'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"hello world\"\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,10 +341,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type (5) #int \n",
+    "type (5.0) #float\n",
+    "type (\"5\") #str\n",
+    "type (-5) #int\n",
+    "type (5/2) #float\n",
+    "type (5//2) #int\n",
+    "type (5==2) #bool\n",
+    "#type(5=2) erreur\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,10 +381,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type ((5,2)) #tuple\n",
+    "type ([5,2]) #list\n",
+    "type ({5,2}) #set"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,12 +412,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le type de x est <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=12\n",
+    "print(\"le type de x est\", type (x))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,10 +442,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v=149"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,12 +460,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "149 = 13 * 11 + 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(v, '=',  v // 11, '* 11', '+', v % 11)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -329,10 +489,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -351,12 +524,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le nombre est: 78\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint \n",
+    "nombre = randint(0,100)\n",
+    "if nombre % 2 == 0:\n",
+    "    print(\"le nombre est:\", nombre)\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(\"Le nombre est:\", nombre)\n",
+    "    print(False)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -367,12 +558,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n"
+     ]
+    }
+   ],
+   "source": [
+    "calcul = 2 ** 256\n",
+    "print(len(str(calcul)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -385,14 +587,18 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Ecrire l'expression qui donne le dernier chiffre du nombre référencé par la variable `a`."
+    "from random import randint\n",
+    "a = randint(10,100)\n",
+    "print(a)\n",
+    "a = str(a)\n",
+    "print(a[-1])"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Ecrire l'expression qui donne l'avant-dernier chiffre du nombre référencé par la variable `a`."
+    "Ecrire l'expression qui donne l'avant-dernier chiffre du nombre référencé par la variable `a`.\n"
    ]
   },
   {
@@ -407,12 +613,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 False 6\n",
+      "0 2 True 6\n",
+      "0 2 False 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0,2 + 0,4 == 0,6)\n",
+    "print(0,2 + 0,4 > 0,6)\n",
+    "print(0,2 + 0,4 < 0,6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -423,12 +643,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0.5\n",
+    "x = x*2**30\n",
+    "x = int(x)\n",
+    "x = x/2**30\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -462,14 +696,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a + b = helloworld\n",
+      "b + a = worldhello\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"hello\"\n",
-    "b = 'world'"
+    "b = 'world'\n",
+    "print ('a + b =', a+b)\n",
+    "print ('b + a =', b+a)\n"
    ]
   },
   {
@@ -490,12 +735,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a*3 = hellohellohello\n",
+      "(a+b)*2 = helloworldhelloworld\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a*3 = hellohellohello')\n",
+    "print('(a+b)*2 = helloworldhelloworld')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -506,10 +763,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3232\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"32\"\n",
+    "#3232\n",
+    "print(a*2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -522,10 +791,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'32'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -536,12 +818,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a>b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -566,13 +861,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hellohello'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = \"32\""
+    "a * 2 #'hellohello'"
    ]
   },
   {
@@ -584,12 +890,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(a)\n",
+    "print(a * 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -600,12 +917,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = input (\"Tape quelquechose au clavier\")\n",
+    "s\n",
+    "#il demande à l'utilisateur de taper quelque chose qu'il stockera dans s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -616,12 +948,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18560/3878305886.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"tape quelque chose au clavier\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"s =\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"s*2 =\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "s = int(input(\"tape quelque chose au clavier\"))\n",
+    "print(\"s =\", s)\n",
+    "print(\"s*2 =\", s*2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -711,9 +1059,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "04a0d3d3d6eafd0bf874b6358315ecbb5e88f89f24fca05dc2ddf425b4b7ea61"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -726,7 +1076,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
